--- a/arch/arm64/boot/dts/qcom/msm8916.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8916.dtsi
@@ -837,6 +837,72 @@
 			#size-cells = <0>;
 			cell-index = <0>;
 		};
+
+	qfprom: qfprom@5c000 {
+		compatible = "qcom,qfprom";
+		reg = <0x5c000 0x1000>;
+		#address-cells = <1>;
+		#size-cells = <1>;
+		tsens_caldata: caldata@d0 {
+			reg = <0xd0 0x8>;
+		};
+		tsens_calsel: calsel@ec {
+			reg = <0xec 0x4>;
+		};
+	};
+
+	tsens: thermal-sensor@4a8000 {
+		compatible = "qcom,msm8916-tsens";
+		reg = <0x4a8000 0x2000>;
+		eeproms = <&tsens_caldata>, <&tsens_calsel>;
+		eeprom-names = "calib_data", "calib_sel";
+		qcom,tsens-slopes = <3200 3200 3200 3200 3200>;
+		#thermal-sensor-cells = <1>;
+	};
+
+	thermal-zones {
+		cpu-thermal0 {
+			polling-delay-passive = <250>;
+			polling-delay = <1000>;
+
+			thermal-sensors = <&tsens 4>;
+
+			trips {
+				cpu_alert0: trip@0 {
+					temperature = <100000>;
+					hysteresis = <2000>;
+					type = "passive";
+				};
+				cpu_crit0: trip@1 {
+					temperature = <125000>;
+					hysteresis = <2000>;
+					type = "critical";
+				};
+			};
+		};
+
+		cpu-thermal1 {
+			polling-delay-passive = <250>;
+			polling-delay = <1000>;
+
+			thermal-sensors = <&tsens 3>;
+
+			trips {
+				cpu_alert2: trip@0 {
+					temperature = <100000>;
+					hysteresis = <2000>;
+					type = "passive";
+				};
+				cpu_crit2: trip@1 {
+					temperature = <125000>;
+					hysteresis = <2000>;
+					type = "critical";
+				};
+			};
+		};
+
+	};
+
 	};
 };
 
