UBUNTU: SAUCE: opennsl: add proper CFLAGS
BugLink: https://launchpad.net/bugs/1665783

Signed-off-by: Wen-chien Jesse Sung <jesse.sung@canonical.com>
Acked-by: Brad Figg <brad.figg@canonical.com>
Acked-by: Seth Forshee <seth.forshee@canonical.com>
Signed-off-by: Thadeu Lima de Souza Cascardo <cascardo@canonical.com>

--- a/ubuntu/opennsl/Makefile
+++ b/ubuntu/opennsl/Makefile
@@ -9,7 +9,12 @@ ccflags-y += \
 	-I$(OP)/include \
 	-I$(OP)/systems/bde/linux/include \
 	-I$(OP)/systems/bde/shared/include \
-	-I$(OP)/systems/linux/kernel/modules/include
+	-I$(OP)/systems/linux/kernel/modules/include \
+	-DLONGS_ARE_64BITS \
+	-DPTRS_ARE_64BITS \
+	-DSAL_SPL_LOCK_ON_IRQ \
+	-DSYS_BE_PIO=0 -DSYS_BE_PACKET=0 -DSYS_BE_OTHER=0 \
+	-DLE_HOST=1 -DSAL_BDE_DMA_MEM_DEFAULT=16
 
 obj-$(CONFIG_OPENNSL_BCM_KNET) += linux-bcm-knet.o
 
