s32g: add dts for s32gxxx simulator
Issue: ALB-1662
Signed-off-by: Larisa Grigore <Larisa.Grigore@nxp.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -8,6 +8,7 @@ dtb-$(CONFIG_ARCH_S32) += s32v234-pcie.dtb
 dtb-$(CONFIG_ARCH_S32) += s32v234-simulator.dtb
 dtb-$(CONFIG_ARCH_S32) += s32v234-tmdp.dtb
 dtb-$(CONFIG_ARCH_S32) += s32v244-simulator.dtb
+dtb-$(CONFIG_ARCH_S32) += s32gxxx-simulator.dtb
 dtb-$(CONFIG_ARCH_FSL_LS2085A) += fsl-ls2085a-simu.dtb
 
 always		:= $(dtb-y)
