--- a/drivers/pci/host/Kconfig
+++ b/drivers/pci/host/Kconfig
@@ -90,7 +90,7 @@ config PCI_RCAR_GEN2_PCIE
 
 config PCI_HOST_GENERIC
 	bool "Generic PCI host controller"
-	depends on OF && (ARM || ARM64)
+	depends on ARM && OF
 	help
 	  Say Y here if you want to support a simple generic PCI host
 	  controller, such as the one emulated by kvmtool.
