--- a/drivers/phy/qualcomm/Kconfig
+++ b/drivers/phy/qualcomm/Kconfig
@@ -72,6 +72,7 @@ config PHY_QCOM_USB_HS
 	tristate "Qualcomm USB HS PHY module"
 	depends on USB_ULPI_BUS
 	depends on EXTCON || !EXTCON # if EXTCON=m, this cannot be built-in
+	depends on INTERCONNECT || !INTERCONNECT
 	select GENERIC_PHY
 	help
 	  Support for the USB high-speed ULPI compliant phy on Qualcomm
