crypto: qcom-rng: Use the interconnect API
Signed-off-by: Georgi Djakov <georgi.djakov@linaro.org>

--- a/drivers/crypto/Kconfig
+++ b/drivers/crypto/Kconfig
@@ -591,6 +591,7 @@ config CRYPTO_DEV_QCE
 config CRYPTO_DEV_QCOM_RNG
 	tristate "Qualcomm Random Number Generator Driver"
 	depends on ARCH_QCOM || COMPILE_TEST
+	depends on INTERCONNECT || !INTERCONNECT
 	select CRYPTO_RNG
 	help
 	  This driver provides support for the Random Number
