hse: crypto driver skeleton
Issue: ALB-3635
Signed-off-by: Valentin Ciocoi Radulescu <valentin.ciocoi@nxp.com>

--- a/drivers/crypto/Kconfig
+++ b/drivers/crypto/Kconfig
@@ -265,6 +265,8 @@ config CRYPTO_DEV_HIFN_795X_RNG
 
 source drivers/crypto/caam/Kconfig
 
+source drivers/crypto/hse/Kconfig
+
 config CRYPTO_DEV_TALITOS
 	tristate "Talitos Freescale Security Engine (SEC)"
 	select CRYPTO_AEAD
