ARM: msm: dts: Add QCS404 device tree support for SSRD platform
Enable QCS404 booting on SSRD by adding corresponding device
tree entries.

Change-Id: I68781b38c06b0143863e4e33c61d9727b4487594
Signed-off-by: Avaneesh Kumar Dwivedi <akdwived@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -25,7 +25,8 @@ else
 dtb-$(CONFIG_ARCH_QCS405) += qcs403-iot-sku1.dtb \
 			qcs403-iot-sku2.dtb \
 			qcs403-iot-sku3.dtb \
-			qcs403-iot-sku4.dtb
+			qcs403-iot-sku4.dtb \
+			qcs404-iot-sku1.dtb
 endif
 
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
