pcie: update s32v specific support to kernel 4.19
In kernel 4.19 all of the native pci drivers have been
collected under 'drivers/pci/controller/', as it can be
seen in the following commit:
'commit 6e0832fa432e ("PCI: Collect all native drivers under
		       drivers/pci/controller/")'

Therefore, changes have been manually applied, due to modifications
in the source tree. Our S32V specific support is not affected,
so the pcie driver update is similiar to the work done in
kernel 4.14 update from 4.1. See the following commit for
refference:
'commit a4115749e761 ("pcie: merge s32v specific support to kernel 4.14")'

Issue: ALB-3664
Signed-off-by: Costea Ciprian <ciprianmarian.costea@nxp.com>

--- a/drivers/pci/controller/Kconfig
+++ b/drivers/pci/controller/Kconfig
@@ -63,6 +63,43 @@ config PCI_FTPCI100
 	depends on OF
 	default ARCH_GEMINI
 
+config PCI_S32V234
+	bool "Freescale S32V234 PCIe Host controller"
+	depends on OF && (ARM || ARM64)
+	select PCIEPORTBUS
+	select PCIE_DW
+	help
+	If you're using a S32V234 based board, either in Root Complex
+	or EP mode, you should enable this.
+	Otherwise you should set it to 'no'
+
+config PCI_S32V234_IGNORE_ERR009852
+	bool "Ignore Freescale S32V234 erratum ERR009852"
+	depends on OF && (ARM || ARM64)
+	help
+	Erratum ERR009852 limits inbound transactions over PCIe on certain,
+	older chipsets having maskset 0N71N, when configured as End Point.
+	Outbound transactions are not affected.
+	If you are using an affected variant of the SoC, you should leave
+	this option unchecked, unless for development purposes (and if you
+	know what you're doing).
+	Clearing this option will make EP's BAR registers inaccessible
+	from the RC on affected variants.
+
+	On newer chipsets, the erratum is by default ignored (e.g. maskset
+	1N71N or newer), so you would not have to worry about this option
+	anymore.
+
+	If unsure, select 'no'.
+
+config PCI_DW_DMA
+	bool "Freescale S32V234 PCIe DW DMA"
+	depends on OF && (ARM || ARM64)
+	help
+	If you're using a S32V234 based board and want to use Internal DMA
+	engine in PCIe mode, you want this enabled.
+	Otherwise you should set it to 'no'
+
 config PCI_TEGRA
 	bool "NVIDIA Tegra PCIe controller"
 	depends on ARCH_TEGRA || COMPILE_TEST
