dts: Add new entry for S32G398A emulator
Issue: ALB-6122
Signed-off-by: Larisa Grigore <larisa.grigore@nxp.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -50,6 +50,7 @@ dtb-$(CONFIG_ARCH_S32) += fsl-s32g274a-emu.dtb
 dtb-$(CONFIG_ARCH_S32) += fsl-s32g274a-evb.dtb
 dtb-$(CONFIG_ARCH_S32) += fsl-s32g274a-rdb.dtb
 dtb-$(CONFIG_ARCH_S32) += fsl-s32g274a-rdb2.dtb
+dtb-$(CONFIG_ARCH_S32) += fsl-s32g398a-emu.dtb
 dtb-$(CONFIG_ARCH_S32) += fsl-s32r45-simulator.dtb
 dtb-$(CONFIG_ARCH_S32) += fsl-s32r45-emu.dtb
 dtb-$(CONFIG_ARCH_S32) += fsl-s32r45-evb.dtb
