pinctrl: s32g: Replace s32g274 occurrence with s32g
The change is necessary for the new S32G3.

Issue: ALB-6122
Signed-off-by: Larisa Grigore <larisa.grigore@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-s32g.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-s32g.dtsi
@@ -10,7 +10,7 @@
 
 #include "fsl-s32-gen1.dtsi"
 #include <dt-bindings/mailbox/nxp-llce-mb.h>
-#include <dt-bindings/pinctrl/s32g274-pinctrl.h>
+#include <dt-bindings/pinctrl/s32g-pinctrl.h>
 #include <dt-bindings/clock/s32g-scmi-clock.h>
 #include <dt-bindings/reset/s32g-scmi-reset.h>
 #include <dt-bindings/net/fsl-s32g-pfeng.h>
@@ -350,7 +350,7 @@
 		#size-cells = <2>;
 		status = "okay";
 		pinctrl0: siul2-pinctrl0@4009C000 {
-			compatible = "fsl,s32g274-siul2_0-pinctrl";
+			compatible = "fsl,s32g-siul2_0-pinctrl";
 			#pinctrl-cells = <2>;
 			reg = <0x1 0x0 0x0 0x198>,
 			<0x2 0x0 0x0 0x150>;
@@ -403,7 +403,7 @@
 			 <2 0 0x0 0x44010C1C 0x0 0x5E4>;
 
 		pinctrl1: siul2-pinctrl1@44010000 {
-			compatible = "fsl,s32g274-siul2_1-pinctrl";
+			compatible = "fsl,s32g-siul2_1-pinctrl";
 			#pinctrl-cells = <2>;
 			reg = <0x1 0x0 0x0 0x13C>,
 			<0x2 0x0 0x0 0x5E4>;
