--- a/drivers/pinctrl/freescale/Makefile
+++ b/drivers/pinctrl/freescale/Makefile
@@ -30,7 +30,7 @@ obj-$(CONFIG_PINCTRL_IMX23)	+= pinctrl-imx23.o
 obj-$(CONFIG_PINCTRL_IMX25)	+= pinctrl-imx25.o
 obj-$(CONFIG_PINCTRL_IMX28)	+= pinctrl-imx28.o
 obj-$(CONFIG_PINCTRL_S32V234)	+= pinctrl-s32v234.o
-obj-$(CONFIG_PINCTRL_S32GEN1)	+= pinctrl-s32g274.o
+obj-$(CONFIG_PINCTRL_S32GEN1)	+= pinctrl-s32g.o
 obj-$(CONFIG_PINCTRL_S32GEN1)	+= pinctrl-s32r45.o
 obj-$(CONFIG_PINCTRL_S32V_CORE)	+= pinctrl-s32v-core.o
 obj-$(CONFIG_PINCTRL_S32_GEN1_CORE)	+= pinctrl-s32-gen1-core.o
