dts: s32g398aemu: Remove reserved memories
On Zebu, we have only 1GB DDR so remove the reserved areas
of memory which don't fit. Those areas were not used on emulator.

Issue: ALB-6122
Signed-off-by: Larisa Grigore <larisa.grigore@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-s32-gen1.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-s32-gen1.dtsi
@@ -78,7 +78,7 @@
 			status = "disabled";
 		};
 
-		scmi {
+		scmi: scmi {
 			compatible = "arm,scmi";
 			mboxes = <&smc_tx_mbox>;
 			mbox-names = "tx";
