--- a/arch/arm64/boot/dts/qcom/sm8150-sde.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-sde.dtsi
@@ -629,7 +629,7 @@
 		qcom,phy-version = <0x420>;
 		qcom,aux-cfg0-settings = [20 00];
 		qcom,aux-cfg1-settings = [24 13];
-		qcom,aux-cfg2-settings = [28 24];
+		qcom,aux-cfg2-settings = [28 a4];
 		qcom,aux-cfg3-settings = [2c 00];
 		qcom,aux-cfg4-settings = [30 0a];
 		qcom,aux-cfg5-settings = [34 26];
