UBUNTU: [Packaging] build-avb: add packages (build-dependencies) to provide tools to generate android boot img
BugLink: https://bugs.launchpad.net/bugs/1927006

add dependencies which will provide necessary tools to build initrd &
android boot.img

Signed-off-by: Shrirang Bagul <shrirang.bagul@canonical.com>

--- a/debian.qcomm/control.stub.in
+++ b/debian.qcomm/control.stub.in
@@ -37,6 +37,9 @@ Build-Depends:
  dkms <!stage1>,
  curl <!stage1>,
  clang <!stage1>,
+ libfdt-dev <!stage1>,
+ android-tools-mkbootimg <!stage1>,
+ ubuntu-core-initramfs <!stage1>,
 Build-Depends-Indep:
  xmlto <!stage1>,
  docbook-utils <!stage1>,
